fix: overflow of the codeblocks in all components

--- a/components/alerts.css
+++ b/components/alerts.css
@@ -70,3 +70,7 @@
     width: 50%;
   }
 }
+
+.alerts .language-markup {
+  height: 10rem;
+}
